[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Background.gd" type="Script" id=1]
[ext_resource path="res://Assets/Background.jpg" type="Texture" id=2]
[ext_resource path="res://Fonts/Schluber.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/circle.png" type="Texture" id=4]
[ext_resource path="res://Themes/PressedBtn.tres" type="StyleBox" id=5]
[ext_resource path="res://Themes/NormalBtn.tres" type="StyleBox" id=6]
[ext_resource path="res://Scripts/Levels.gd" type="Script" id=7]
[ext_resource path="res://Assets/light.png" type="Texture" id=8]
[ext_resource path="res://Scripts/MainPlayer.gd" type="Script" id=9]
[ext_resource path="res://Assets/play_button.png" type="Texture" id=10]
[ext_resource path="res://Assets/play_button_pressed.png" type="Texture" id=11]
[ext_resource path="res://Assets/play_button_hovered.png" type="Texture" id=12]
[ext_resource path="res://Assets/Cleared.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 3 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=7]
radius = 27.0

[node name="Levels" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="Background"]
color = Color( 0.278431, 0.211765, 0.211765, 1 )

[node name="Background" type="Sprite" parent="Background"]
modulate = Color( 0.32549, 0.341176, 0.823529, 1 )
position = Vector2( 288, 512 )
scale = Vector2( 0.411429, 0.411576 )
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -512.0
margin_right = 288.0
margin_bottom = 512.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MarginContainer"]
margin_right = 576.0
margin_bottom = 1024.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/CenterContainer"]
margin_left = 63.0
margin_top = 160.0
margin_right = 513.0
margin_bottom = 864.0
custom_constants/separation = 10

[node name="TitleContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 450.0
margin_bottom = 114.0
custom_constants/margin_bottom = 25

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/TitleContainer"]
margin_right = 450.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/TitleContainer/CenterContainer"]
margin_left = 125.0
margin_right = 325.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 1 )
text = "LEVELS"

[node name="LevelsContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 450.0
margin_bottom = 208.0
custom_constants/margin_top = 25

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/LevelsContainer"]
margin_top = 25.0
margin_right = 450.0
margin_bottom = 84.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/LevelsContainer/CenterContainer"]
margin_right = 450.0
margin_bottom = 59.0
custom_constants/separation = 50

[node name="Level1" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/LevelsContainer/CenterContainer/HBoxContainer"]
material = SubResource( 2 )
margin_right = 200.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.666667 )
custom_colors/font_color_pressed = Color( 0.0196078, 0.52549, 0.835294, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
toggle_mode = true
text = "01  slide"

[node name="ClearedLvl1" type="Sprite" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/LevelsContainer/CenterContainer/HBoxContainer/Level1"]
visible = false
position = Vector2( 17, 0 )
rotation = -0.349066
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 13 )

[node name="Level2" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/LevelsContainer/CenterContainer/HBoxContainer"]
material = SubResource( 2 )
margin_left = 250.0
margin_right = 450.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.666667 )
custom_colors/font_color_pressed = Color( 0.0196078, 0.52549, 0.835294, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
toggle_mode = true
text = "02  spin"

[node name="ClearedLvl2" type="Sprite" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/LevelsContainer/CenterContainer/HBoxContainer/Level2"]
visible = false
position = Vector2( 17, 0 )
rotation = -0.349066
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 13 )

[node name="Difficulty Container" type="MarginContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 450.0
margin_bottom = 704.0
custom_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Difficulty Container"]
margin_top = 100.0
margin_right = 450.0
margin_bottom = 486.0
rect_min_size = Vector2( 0, 386 )
custom_constants/separation = 50

[node name="Easy" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Difficulty Container/VBoxContainer"]
modulate = Color( 0.372549, 0.858824, 0.419608, 1 )
material = SubResource( 4 )
margin_right = 450.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.666667 )
custom_colors/font_color_pressed = Color( 0.984314, 0.984314, 0.984314, 0.188235 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
text = "Easy"

[node name="Medium" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Difficulty Container/VBoxContainer"]
modulate = Color( 0.870588, 0.847059, 0.458824, 1 )
material = SubResource( 4 )
margin_top = 109.0
margin_right = 450.0
margin_bottom = 168.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.666667 )
custom_colors/font_color_pressed = Color( 0.984314, 0.984314, 0.984314, 0.188235 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
text = "Medium"

[node name="Hard" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Difficulty Container/VBoxContainer"]
modulate = Color( 0.94902, 0.0980392, 0.0980392, 1 )
material = SubResource( 4 )
margin_top = 218.0
margin_right = 450.0
margin_bottom = 277.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.666667 )
custom_colors/font_color_pressed = Color( 0.984314, 0.984314, 0.984314, 0.188235 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
text = "Hard"

[node name="Endless" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Difficulty Container/VBoxContainer"]
visible = false
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 4 )
margin_top = 327.0
margin_right = 450.0
margin_bottom = 386.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.666667 )
custom_colors/font_color_pressed = Color( 0.984314, 0.984314, 0.984314, 0.188235 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
text = "Endless"

[node name="BackButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 80.0
margin_bottom = 102.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )
flip_h = true

[node name="SampleMainPlayer" type="Node" parent="."]

[node name="Player" type="RigidBody2D" parent="SampleMainPlayer"]
position = Vector2( 288, 480 )
mass = 0.00102041
physics_material_override = SubResource( 6 )
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="SampleMainPlayer/Player"]
position = Vector2( 0, 3 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SampleMainPlayer/Player"]
position = Vector2( 0, 3 )
shape = SubResource( 7 )

[node name="Light2D" type="Light2D" parent="SampleMainPlayer/Player"]
position = Vector2( 0, 3 )
texture = ExtResource( 8 )
shadow_enabled = true
shadow_gradient_length = 1.0
shadow_filter = 2
shadow_filter_smooth = 20.0

[node name="Walls" type="StaticBody2D" parent="SampleMainPlayer"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SampleMainPlayer/Walls"]
polygon = PoolVector2Array( 0, 0, 576, 0, 576, 1024, 0, 1024, 0, 32, -16, 48, -16, 1040, 592, 1040, 592, -16, -16, -16, -16, 32, 0, 32 )

[connection signal="toggled" from="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/LevelsContainer/CenterContainer/HBoxContainer/Level1" to="." method="_on_Level1_toggled"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/LevelsContainer/CenterContainer/HBoxContainer/Level2" to="." method="_on_Level2_toggled"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Difficulty Container/VBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Difficulty Container/VBoxContainer/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Difficulty Container/VBoxContainer/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Difficulty Container/VBoxContainer/Endless" to="." method="_on_Endless_pressed"]
[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_BackButton_pressed"]
